fixed onboarding image alignment

--- a/resources/js/src/styles/Auth.module.scss
+++ b/resources/js/src/styles/Auth.module.scss
@@ -12,7 +12,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 90vh;
+    min-height: 95vh;
     background: rgba(248, 234, 243, 0.5);
     padding: 50px 0;
 }
