--- a/resources/js/src/styles/Home.module.scss
+++ b/resources/js/src/styles/Home.module.scss
@@ -16,6 +16,11 @@
     }
 
     @media only screen and (max-width: $mobile-view) {
+        background: url("../assets/phone.png");
+        background-repeat: no-repeat;
+        background-size: 150px;
+        background-position: 105% 5%;
+
         grid-template-areas:
             "onboardingHeader onboardingImg"
             "onboardingText ."
@@ -41,7 +46,9 @@
     }
 
     @media only screen and (max-width: $mobile-view) {
-        width: 100%;
+        font-size: 1rem;
+        line-height: 1.5rem;
+        width: 125%;
     }
 }
 
@@ -58,11 +65,11 @@
     @media only screen and (max-width: $small-tab-view) {
         margin-bottom: 30px;
         font-size: 0.8rem;
-        line-height: 1rem;
+        line-height: 1.2rem;
     }
 
     @media only screen and (max-width: $mobile-view) {
-        width: 150%;
+        width: 125%;
     }
 }
 
@@ -99,8 +106,7 @@
     }
 
     @media only screen and (max-width: $mobile-view) {
-        background-size: contain;
-        background-position: 145% top;
+        display: none;
     }
 }
 
@@ -134,6 +140,10 @@
 
     @media only screen and (max-width: $tab-view) {
         margin: 0 auto 30px;
+    }
+
+    @media only screen and (max-width: $mobile-view) {
+        font-size: 1rem;
     }
 }
 
@@ -238,7 +248,7 @@
     position: relative;
     width: 50%;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     align-items: flex-end;
 
     @media only screen and (max-width: $tab-view) {
@@ -284,4 +294,9 @@
     height: 7px;
     border-radius: 100%;
     background: rgba(113, 101, 227, 0.63);
+
+    @media only screen and (max-width: $mobile-view) {
+        width: 5px;
+        height: 5px;
+    }
 }
